--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 
     <header>
-      <h1>EL OSO POLAR DEL POLO SUR</h1>
-      <p>La venganza de los caidos</p>
+      <h1>michis</h1>
+      <p>los gatos son terapeuticos?</p>
     </header>
 
 
@@ -27,7 +27,7 @@
 
 
     <footer>
-      <p>EL OSO POLAR ESTABA VOLANDO POR LOS CIELOS CUANDO MIRO ASI POR DEBAJO DEL HOMBRO UN HELICOPERO CON CANTINFLAS DENTRO. FIN</p>
+      <p>melanie macias 2do secundaria</p>
     </footer>
 
 
